# python-project-lvl4

./: .env.example  .gitignore  INSTALLATION.md  Makefile  Procfile  README.md  datadump.json  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: task-manager.yml
fixtures/: labels.yaml  statuses.yaml  tasks.yaml  users.yaml
labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_alter_label_name.py
staticfiles/: staticfiles.json
statuses/: admin.py  forms.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
task_manager/: asgi.py  settings.py  urls.py  views.py  wsgi.py
task_manager/fixtures/: tasks.yaml
task_manager/labels/: forms.py  tests.py  urls.py  views.py
task_manager/settings/: base.py  production.py
task_manager/staticfiles/: staticfiles.json
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/templates/: base.html  index.html
task_manager/users/: forms.py  tests.py  urls.py  views.py
tasks/: forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_executor_alter_task_status.py  0002_alter_task_labels.py  0003_alter_task_labels.py  0003_task_labels.py
templates/: base.html  index.html
templates/labels/: create_label.html  delete_label.html  list_labels.html  update_label.html
templates/statuses/: update.html  (+4 more)
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
(+35 files in other folders)
