[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["TurtleOld <shurpo.alexander@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"
Django = "^4.0.4"
python-dotenv = "^0.20.0"
dj-database-url = "^0.5.0"
django-bootstrap5 = "^21.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
